<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:background="#ddd"
        android:orientation="vertical"
        android:padding="10dp"
        tools:context=".Work">

        <android.support.v7.widget.CardView
            app:cardUseCompatPadding="true"
            app:contentPadding="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:foreground="?android:attr/selectableItemBackground">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Experiences"
                    android:textColor="#434343"
                    android:textSize="24sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/profile_image"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:src="@drawable/foody" />

                    <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/foody_vn"
                        android:textColor="#000"
                        android:textSize="20sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ios_developer" />

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp">

                        <ImageView
                            android:id="@+id/imageview1"
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:src="@drawable/project" />

                        <TextView
                            android:id="@+id/textview1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="5dp"
                            android:layout_toRightOf="@+id/imageview1"
                            android:text="Foody Application Project"
                            android:textSize="16sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/textview1"
                            android:layout_marginLeft="5dp"
                            android:layout_toRightOf="@+id/imageview1"
                            android:text="@string/description"
                            android:textSize="11sp" />
                    </RelativeLayout>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="@string/description"
                        android:textSize="11sp" />
                </LinearLayout>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/profile_image"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:src="@drawable/hvn" />


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:orientation="vertical"
                        android:layout_marginTop="10dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/harvey_nash"
                            android:textColor="#000"
                            android:textSize="20sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/ios_developer" />

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp">

                            <ImageView
                                android:id="@+id/imageview2"
                                android:layout_width="30dp"
                                android:layout_height="30dp"
                                android:src="@drawable/project" />

                            <TextView
                                android:id="@+id/textview2"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="5dp"
                                android:layout_toRightOf="@+id/imageview1"
                                android:text="Manulife Healthcare Project"
                                android:textSize="16sp" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_below="@+id/textview2"
                                android:layout_marginLeft="5dp"
                                android:layout_toRightOf="@+id/imageview2"
                                android:text="@string/description"
                                android:textSize="11sp" />
                        </RelativeLayout>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:text="@string/description"
                            android:textSize="11sp" />
                    </LinearLayout>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/profile_image"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:src="@drawable/dxc" />


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:orientation="vertical"
                        android:layout_marginTop="10dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/DXC"
                            android:textColor="#000"
                            android:textSize="20sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/ios_developer" />

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp">

                            <ImageView
                                android:id="@+id/imageview2"
                                android:layout_width="30dp"
                                android:layout_height="30dp"
                                android:src="@drawable/project" />

                            <TextView
                                android:id="@+id/textview2"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="5dp"
                                android:layout_toRightOf="@+id/imageview1"
                                android:text="Library for Insurance Project"
                                android:textSize="16sp" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_below="@+id/textview2"
                                android:layout_marginLeft="5dp"
                                android:layout_toRightOf="@+id/imageview2"
                                android:text="@string/description"
                                android:textSize="11sp" />
                        </RelativeLayout>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:text="@string/description"
                            android:textSize="11sp" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>

        </android.support.v7.widget.CardView>
    </LinearLayout>
</ScrollView>